Final touches on the presentation.

--- a/code/html.html
+++ b/code/html.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>...</head>
   <body>
-    <div id="impress">
-      <div id="intro">
-        <h2>Rethink</h2>
+    <div class="l-main">
+      <div class="navbar">
         ...
